--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.3",
+    "highlight": "^0.2.4",
+    "highlight.js": "^11.7.0",
     "microcms-js-sdk": "^2.3.0",
     "next": "^13.1.1-canary.1",
     "react": "^18.2.0",
@@ -19,5 +22,8 @@
   "devDependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
+  },
+  "optionalDependencies": {
+    "@next/swc-linux-x64-gnu": "13.1.1"
   }
 }
