--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/react": "18.0.26",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   },
